--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "nodejs-sandbox",
   "version": "1.0.0",
-  "description": "Node.js example server starter project",
+  "description": "Node.js REST API Project",
   "license": "MIT",
   "main": "index.ts",
   "scripts": {
     "start": "nodemon index.ts"
   },
   "keywords": [],
-  "author": "Ives van Hoorne",
+  "author": "Sayak Ghosh",
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.16",
+    "@types/node": "^20.16.5",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.6.2"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.20.0"
   }
 }
